# Gazebo_Contact_Simulation

./: README.md
Gazebo_Simulation/: Simulation_Models_Creation_Steps  xacro_to_sdf
Gazebo_Simulation/Contact_Sensor/: CMakeLists.txt  CoordinatesPlugin.cc  CoordinatesPlugin.hh
Gazebo_Simulation/World/: contact.world
Gazebo_Simulation/World/Allegro_Hand/: model.config  model.sdf
